changing to virtual threads scenario 3